--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Waffle Christmas Decorations Pricing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prissetting for Vaffeljuledekorasjoner</title>
   <style>
-    /* Simple CSS for the layout */
+    /* Dark mode styles */
     body {
       font-family: Arial, sans-serif;
       display: flex;
@@ -12,61 +13,110 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      background-color: #000000;
+      color: #fff;
     }
     .container {
       text-align: center;
     }
-    input[type="number"] {
-      padding: 8px;
-      margin-top: 10px;
+    .button-container {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 5px;
+      padding: 10px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      max-width: 400px;
+      margin: 0 auto;
+      background-color: #1c1c1c;
+    }
+    .btn {
+      padding: 15px;
+      font-size: 20px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      width: 100%;
+      color: #333; /* Dark text color */
+    }
+    .red {
+      background-color: #dd6761;
+      color: #fff;
+    }
+    .yellow {
+      background-color: #f2a950;
+      color: #fff;
+    }
+    .green {
+      background-color: #80a66c;
+      color: #fff;
     }
     #priceBox {
       border: 2px solid #ccc;
+      border-radius: 10px;
       width: 200px;
       height: 100px;
       line-height: 100px;
       font-size: 24px;
       margin-top: 20px;
+      background-color: #1c1c1c;
     }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <div>
-    <label for="quantity">Enter quantity:</label><br>
-    <input type="number" id="quantity" name="quantity" min="1" oninput="calculateAndUpdate()">
+  <div class="button-container">
+    <!-- Buttons from 1 to 30 -->
+    <button class="btn red" onclick="selectQuantity(1)">1</button>
+    <button class="btn yellow" onclick="selectQuantity(2)">2</button>
+    <button class="btn green" onclick="selectQuantity(3)">3</button>
+    <button class="btn red" onclick="selectQuantity(4)">4</button>
+    <button class="btn yellow" onclick="selectQuantity(5)">5</button>
+    <button class="btn green" onclick="selectQuantity(6)">6</button>
+    <button class="btn red" onclick="selectQuantity(7)">7</button>
+    <button class="btn yellow" onclick="selectQuantity(8)">8</button>
+    <button class="btn green" onclick="selectQuantity(9)">9</button>
+    <button class="btn red" onclick="selectQuantity(10)">10</button>
+    <button class="btn yellow" onclick="selectQuantity(11)">11</button>
+    <button class="btn green" onclick="selectQuantity(12)">12</button>
+    <button class="btn red" onclick="selectQuantity(13)">13</button>
+    <button class="btn yellow" onclick="selectQuantity(14)">14</button>
+    <button class="btn green" onclick="selectQuantity(15)">15</button>
+    <button class="btn red" onclick="selectQuantity(16)">16</button>
+    <button class="btn yellow" onclick="selectQuantity(17)">17</button>
+    <button class="btn green" onclick="selectQuantity(18)">18</button>
+    <button class="btn red" onclick="selectQuantity(19)">19</button>
+    <button class="btn yellow" onclick="selectQuantity(20)">20</button>
+    <button class="btn green" onclick="selectQuantity(21)">21</button>
+    <button class="btn red" onclick="selectQuantity(22)">22</button>
+    <button class="btn yellow" onclick="selectQuantity(23)">23</button>
+    <button class="btn green" onclick="selectQuantity(24)">24</button>
+    <button class="btn red" onclick="selectQuantity(25)">25</button>
+    <button class="btn yellow" onclick="selectQuantity(26)">26</button>
+    <button class="btn green" onclick="selectQuantity(27)">27</button>
+    <button class="btn red" onclick="selectQuantity(28)">28</button>
+    <button class="btn yellow" onclick="selectQuantity(29)">29</button>
+    <button class="btn green" onclick="selectQuantity(30)">30</button>
   </div>
   <div id="priceBox">0 kr</div>
 </div>
 
 <script>
-  function calculateAndUpdate() {
-    const quantity = parseInt(document.getElementById('quantity').value);
-    const price = calculatePrice(quantity);
-    document.getElementById('priceBox').innerText = `${price} kr`;
-  }
-
-  function calculatePrice(quantity) {
-    if (quantity < 1) {
-      return 0;
-    } else if (quantity === 1) {
-      return 150;
+  function selectQuantity(quantity) {
+    let price = 0;
+    if (quantity === 1) {
+      price = 150;
     } else if (quantity === 2) {
-      return 250;
+      price = 250;
     } else if (quantity === 3) {
-      return 300;
+      price = 300;
     } else {
-      const batchesOfThree = Math.floor(quantity / 3);
-      const remaining = quantity % 3;
-      let totalPrice = batchesOfThree * 300; // Calculating batches of 3 with the price 300
-      if (remaining === 1) {
-        totalPrice += 150; // Add the cost of one waffle
-      } else if (remaining === 2) {
-        totalPrice += 250; // Add the cost of two waffles
-      }
-      return totalPrice;
+      const remainder = quantity % 3;
+      const setsOfThree = Math.floor(quantity / 3);
+      price = (setsOfThree * 300) + (remainder * 150);
     }
+    document.getElementById('priceBox').innerText = `${price} kr`;
   }
 </script>
 
